; ModuleID = '/home/carl/AnghaBench/lab/engine/code/game/extr_g_items.c_SaveRegisteredItems.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/game/extr_g_items.c_SaveRegisteredItems.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_ITEMS = common dso_local global i32 0, align 4
@bg_numItems = common dso_local global i32 0, align 4
@itemRegistered = common dso_local global i64* null, align 8
@.str = private unnamed_addr constant [21 x i8] c"%i items registered\0A\00", align 1
@CS_ITEMS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SaveRegisteredItems() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = load i32, i32* @MAX_ITEMS, align 4
  %6 = add nsw i32 %5, 1
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %1, align 8
  %9 = alloca i8, i64 %7, align 16
  store i64 %7, i64* %2, align 8
  store i32 0, i32* %4, align 4
  store i32 0, i32* %3, align 4
  br label %10

10:                                               ; preds = %32, %0
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @bg_numItems, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %35

14:                                               ; preds = %10
  %15 = load i64*, i64** @itemRegistered, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i64, i64* %15, i64 %17
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %27

21:                                               ; preds = %14
  %22 = load i32, i32* %4, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %4, align 4
  %24 = load i32, i32* %3, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8, i8* %9, i64 %25
  store i8 49, i8* %26, align 1
  br label %31

27:                                               ; preds = %14
  %28 = load i32, i32* %3, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i8, i8* %9, i64 %29
  store i8 48, i8* %30, align 1
  br label %31

31:                                               ; preds = %27, %21
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %3, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %3, align 4
  br label %10

35:                                               ; preds = %10
  %36 = load i32, i32* @bg_numItems, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i8, i8* %9, i64 %37
  store i8 0, i8* %38, align 1
  %39 = load i32, i32* %4, align 4
  %40 = call i32 @G_Printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %39)
  %41 = load i32, i32* @CS_ITEMS, align 4
  %42 = call i32 @trap_SetConfigstring(i32 %41, i8* %9)
  %43 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %43)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @G_Printf(i8*, i32) #2

declare dso_local i32 @trap_SetConfigstring(i32, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
